# nixx

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
blog/: index.html
build-log/: index.html
build-log/2026-02-24-project-kickoff/: index.html
build-log/2026-03-02-first-working-server/: index.html
build-log/2026-03-03-memory-system/: index.html
build-log/2026-03-07-tui-and-memory-architecture/: index.html
build-log/2026-03-09-infrastructure-and-docs/: index.html
build-log/2026-03-15-episodic-memory-and-identity/: index.html
build-log/2026-03-15-llm-backend-and-tui-overhaul/: index.html
build-log/2026-03-18-tool-call-fixes-and-intent/: index.html
build-log/2026-03-20-semantic-memory-and-graph-design/: index.html
build-log/2026-03-22-web-tools-and-bug-sprint/: index.html
build-log/2026-03-23-searxng-and-intent-persistence/: index.html
build-log/2026-03-28-timeout-fixes-and-wireguard/: index.html
build-log/2026-04-20-tui-polish-and-cuda-fix/: index.html
config/: user.yaml.example
docs/: architecture.md  index.md  infrastructure.md  knowledge-graph.md  pgweb-guide.md  phone-access.md  project-state.md  queries.md  quickstart.md  stack.md
docs/architecture/: README.md
docs/build-log/: 2026-02-24-project-kickoff.md  2026-03-02-first-working-server.md  2026-03-03-memory-system.md  2026-03-07-tui-and-memory-architecture.md  2026-03-09-infrastructure-and-docs.md  2026-03-15-episodic-memory-and-identity.md  2026-03-15-llm-backend-and-tui-overhaul.md  2026-03-18-tool-call-fixes-and-intent.md  2026-03-20-semantic-memory-and-graph-design.md  2026-03-22-web-tools-and-bug-sprint.md  2026-03-23-searxng-and-intent-persistence.md  2026-03-28-timeout-fixes-and-wireguard.md  2026-04-20-tui-polish-and-cuda-fix.md  index.md
infrastructure/: index.html
knowledge-graph/: index.html
pgweb-guide/: index.html
phone-access/: index.html
project-state/: index.html
queries/: index.html
quickstart/: index.html
scripts/: init-db.sh  install-services.sh  llamacpp.service  nixx-embed.service  nixx-pgweb.service  nixx-server.service  nixx.target  ollama.service  pgweb.sh
search/: search_index.json
services/searxng/: docker-compose.yml  limiter.toml  settings.yml
src/nixx/: __init__.py  cli.py  config.py  prompts.py  server.py
src/nixx/ingest/: __init__.py  chunker.py  pipeline.py  reader.py
src/nixx/ingest/handlers/: __init__.py  base.py  file.py  registry.py  web.py
src/nixx/llm/: __init__.py  client.py  openai_client.py
src/nixx/memory/: __init__.py  db.py  store.py
src/nixx/tools/: __init__.py  base.py  file_tools.py  memory_tools.py  permissions.py  planning.py  read_webpage.py  registry.py  run_python.py  shadow.py  web_search.py
src/nixx/tui/: __init__.py  app.py
stack/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_ingest.py  test_llm_client.py  test_openai_client.py  test_server.py  test_tools.py
