[project]
name = "nixx"
version = "0.1.0"
description = "Self-hosted personal memory system"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "textual>=0.50.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
    "sqlalchemy>=2.0.25",
    "cryptography>=42.0.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
nixx = "nixx.cli:main"
nixx-server = "nixx.server:main"
