[project]
name = "nixx"
version = "0.1.0"
description = "Self-hosted personal memory system"
authors = [{name = "Dr George Perdrizet", email = "george@perdrizet.org"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "textual>=0.50.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",

    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[project.scripts]
nixx = "nixx.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
